--- a/data_analysis.Rmd
+++ b/data_analysis.Rmd
@@ -17,67 +17,103 @@ library(ggthemes)
 library(bbplot)
 library(scales)
 library(ggrepel)
+library(ggcorrplot)
 ```
 
 ```{r}
 con <- mongo("pieces", url="mongodb://localhost/pieces")
 ```
 
+
+
 ```{r}
-data <- con$find("{}") %>% 
-  jsonlite::flatten() %>% 
-  as_tibble() %>% 
-  filter(year !=  0) 
+data <- con$find("{}") %>%
+  jsonlite::flatten() %>%
+  as_tibble() %>%
+  filter(year !=  0) %>%
+  separate(size, c("width", "height"), sep = " X ") %>%
+  mutate(
+    width = as.numeric(width)*2.54,
+    height = as.numeric(height)*2.54,
+    width_unit = "cm",
+    height_unit = "cm",
+    run = as.numeric(run),
+    area = width * height,
+    collections = as.numeric(collections),
+    sold = as.numeric(sold)
+  ) %>% 
+  mutate(released=as.Date(as.POSIXct(as.numeric(released), origin="1970-01-01"))) %>% 
+  separate(artist, c("artist_surname", "artist_firstname"), sep=", ") %>% 
+  mutate(artist_firstname=replace_na(artist_firstname,"")) %>%
+  unite(artist, artist_firstname, artist_surname, sep=" ") %>% 
+  mutate(artist=str_trim(artist))
 ```
+
+
+
 ```{r}
 data %>% write_csv("art_pieces.csv")
 ```
 
 
-```{r}
-data %>% 
-  filter(!is.na(class)) %>% 
-  count()
-```
 
 ```{r}
 data %>% 
   glimpse()
 ```
-
+## Missing Values
 
 
 ```{r}
 data %>% 
-  filter(!is.na(highest_price)) %>% 
-  arrange(-highest_price) %>% 
-  group_by(artist) %>% 
-  summarise(sum_highest=sum(highest_price)) %>% 
-  arrange(-sum_highest)
+  mutate(row=row_number()) %>% 
+  gather(-row, key="feature", value = "value") %>% 
+  mutate(isNa=is.na(value)) %>% 
+  group_by(feature) %>% 
+  mutate(total=n()) %>% 
+  ungroup() %>% 
+  select(-value) %>% 
+  ggplot(aes(x=feature, y=row, fill=isNa))+
+  geom_raster()+
+  coord_flip()
 ```
-```{r}
+
+
+## Univariate Analysis
+
+### Continous Variables
+```{r fig.height=10, fig.width=20}
 data %>% 
   select(-year, -artist_id, -id) %>% 
   select_if(is.numeric) %>% 
   gather(key = "feature", value = "value") %>% 
   filter(!is.na(value)) %>% 
   ggplot(aes(x = value, y = 0)) +
-  geom_jitter() +
-  scale_y_continuous(labels = comma) +
+  geom_boxplot() +
+  scale_x_continuous(trans="log10", labels = comma) +
   facet_wrap(~feature,scales = "free")
 ```
 
+## Categorical Variables
 
-
-
-```{r}
-data %>% 
-  mutate(Label=if_else(highest_price > 20000, artist, "")) %>% 
-  ggplot(aes(x = highest_price, y=0)) +
-  geom_boxplot() +
-  scale_x_continuous(labels = comma) +
-  geom_label_repel(aes(label=Label))
+```{r fig.height=10, fig.width=20}
+data %>%
+  select_if(negate(is.numeric)) %>%
+  select(-released,-artwork,-artist,-paper) %>%
+  select(-contains("_unit")) %>%
+  gather() %>%
+  group_by(key, value) %>%
+  summarise(n = n()) %>%
+  ungroup() %>%
+  ggplot(aes(x = reorder(value, n), y = n)) +
+  geom_bar(stat = "identity") +
+  scale_y_continuous(trans = "log10", labels = comma) +
+  coord_flip() +
+  facet_wrap( ~ key, scales = "free")
 ```
+
+
+
 
 
 ```{r fig.height=10, fig.width=20}
@@ -88,24 +124,32 @@ data %>%
   ggplot(aes(x = reorder(year_bucket,num), y=num)) +
   geom_bar(stat = "identity") +
   scale_y_continuous(labels = comma, trans = "log10") +
-  coord_flip() +
-  bbc_style()
-```
-```{r}
-data %>% 
-  group_by(artist) %>% 
-  summarise(num=n()) %>% 
-  arrange(-num)
+  coord_flip() 
 ```
 
 ```{r}
 data %>% 
-  filter(artist=="Gaines, Charles")
+  group_by(artist) %>%
+  summarise(num=n()) %>%
+  mutate(label=if_else(num>500, artist, "")) %>% 
+  ggplot(aes(x = "", y = num)) +
+  geom_boxplot() +
+  geom_label_repel(aes(label=label))+
+  scale_y_continuous(trans="log10")+
+  coord_flip()
 ```
 
 
+
+
+## Bivariate Analysis
+
 ```{r}
-con <- mongo("fs.files", url="mongodb://localhost/pieces")
-con$find('{"doc_type":"details"}')
+data %>% 
+  drop_na() %>% 
+  select(-year, -artist_id, -id) %>% 
+  select_if(is.numeric) %>% 
+  cor() %>% 
+  ggcorrplot(method = "circle")
 ```
 
