--- a/data_analysis.Rmd
+++ b/data_analysis.Rmd
@@ -25,6 +25,16 @@ library(forcats)
 con <- mongo("pieces", url="mongodb://localhost/pieces")
 ```
 
+```{r}
+tibble(artist=c("Natural","Heart, Brandon","Status Serigraph (Justin Helton)", "Muck, Jules (Muckrock)","Phantom City Creative","Riveau, Pierre Yves (Pez)"))
+
+
+# %>%
+#   mutate(artist_firstname=replace_na(artist_firstname,"")) %>%
+#   unite(artist, artist_firstname, artist_surname, sep=" ")
+  
+```
+
 
 
 ```{r}
@@ -43,11 +53,15 @@ data <- con$find("{}") %>%
     collections = as.numeric(collections),
     sold = as.numeric(sold)
   ) %>% 
-  mutate(released=as.Date(as.POSIXct(as.numeric(released), origin="1970-01-01"))) %>% 
+  mutate(released=as.Date(as.POSIXct(as.numeric(released), origin="1970-01-01")))  %>% 
   separate(artist, c("artist_surname", "artist_firstname"), sep=", ") %>% 
-  mutate(artist_firstname=replace_na(artist_firstname,"")) %>%
-  unite(artist, artist_firstname, artist_surname, sep=" ") %>% 
-  mutate(artist=str_trim(artist))
+  separate(artist_surname, c("artist_surname2", "synonym1"), sep=" \\(") %>%   
+  separate(artist_firstname, c("artist_firstname2", "synonym2"), sep=" \\(") %>% 
+  unite(artist,artist_firstname2, artist_surname2, sep=" ") %>% 
+  mutate(artist=str_replace_all(artist,"NA",""), artist=str_trim(artist)) %>% 
+  unite(synonym, synonym1, synonym2, sep="") %>% 
+  mutate(pseudonym=str_replace_all(synonym,"\\)",""),synonym=str_replace_all(synonym,"NA",""), synonym=str_trim(artist))
+
 ```
 
 
@@ -299,6 +313,59 @@ list(var1=c("class","average_price","average_price","average_price","average_pri
   plotBivariate(..1,..2,..3,..4))
 ```
 
+```{r}
+data <- data %>%  
+  mutate(increase=(highest_price-lowest_price)/lowest_price)
+```
+
+
+
+```{r}
+data %>% 
+  filter(lowest_price > 500 & lowest_price < 2000) %>% 
+  arrange(-increase) %>% 
+  select(id, year, artwork, artist, lowest_price, highest_price, increase, sold)
+```
+
+
+
+
+
+```{r fig.height=10, fig.width=20}
+dir.create("images", showWarnings = F)
+plotValuableArtists <- function(data, .className) {
+  p <- data %>%
+    mutate(artist=if_else(pseudonym!="", "{artist} ({pseudonym})" %>% glue(), artist)) %>% 
+    filter(lowest_price > 500 &
+             lowest_price < 2000,
+           increase > 3 & class == .className) %>%
+    group_by(artist) %>%
+    summarise(avg_increase = mean(increase) * 100) %>%
+    ggplot(aes(x = reorder(artist, avg_increase), y = avg_increase)) +
+    geom_bar(stat = 'identity', fill = "steelblue") +
+    coord_flip() +
+    labs(title = 'Valuable Artists in class "{.className}"' %>% glue(), subtitle = "Average increase of price for artist's art pieces in %") +
+    bbc_style()
+  p %>% finalise_plot(
+    source = "Source: https://artventure.me, Data Source: https://expressobeans.com",
+    width_pixels = 1000,
+    height_pixels = 800,
+    save_filepath = "images/{.className}.jpg" %>% glue()
+  )
+  p
+}
+
+plots <- data %>%
+  distinct(class) %>%
+  pull(class) %>%
+  map(~ data %>% plotValuableArtists(..1))
+
+```
+
+```{r}
+
+plot %>% 
+```
 
 
 
