na is empty string now

--- a/data_analysis.Rmd
+++ b/data_analysis.Rmd
@@ -74,7 +74,7 @@ data <- con$find("{}") %>%
 
 
 ```{r}
-data %>% write_csv("art_pieces.csv")
+data %>% write_csv("art_pieces.csv", na = "")
 ```
 
 
